# saber

./: .description  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  Dockerfile  LICENSE.md  README.md  VERSION.cmake  buildspec.yml  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  cloc_src_saber.csv  cloc_src_saber_bump.csv  cloc_src_saber_external.csv  cloc_src_saber_gaugrid.csv  codecov.yml  saber-import.cmake.in
doc/: CMakeLists.txt  overview.md  overview.sh
doc/autodoc/: tools_asa007.md  tools_atlas.md  tools_const.md  tools_fit.md  tools_func.md  tools_kinds.md  tools_qsort.md  tools_repro.md  tools_samp.md  tools_sp.md  tools_stripack.md  type_avg.md  type_avg_blk.md  type_bpar.md  type_bump.md  type_bump_interface.md  type_cmat.md  type_cmat_blk.md  type_com.md  type_cv.md  type_cv_blk.md  type_diag.md  type_diag_blk.md  type_ens.md  type_gaugrid.md  type_geom.md  type_hdiag.md  type_io.md  type_lct.md  type_lct_blk.md  type_linop.md  type_mesh.md  type_minim.md  type_model.md  type_mom.md  type_mom_blk.md  type_mpl.md  type_msv.md  type_nam.md  type_nicas.md  (+9 more)
doc/bump/: .description  CLOC_REPORT.md  CMakeLists.txt  adding_a_new_model.md  architecture.ksh  autodoc.ksh  autodoc.sh  cloc_report.ksh  cloc_report.md  cloc_report.sh  code_architecture.md  code_autodoc.md  input_data.md  ncl_plots.md  pdf.ksh  pdf.sh  running_the_code.md  standalone_or_online_usage.md  test.md
docs/: CMakeLists.txt  Doxyfile.in
docs/bump/: plot.py
docs/history/: .description
docs/tutorial/: field.py  sampling.py
quench/: .description  CMakeLists.txt
quench/mains/: .description  CMakeLists.txt  quenchConvertState.cc  quenchDirac.cc  quenchErrorCovarianceToolbox.cc  quenchErrorCovarianceTraining.cc  quenchProcessPerts.cc  quenchRandomization.cc  quenchSaberBlockTest.cc
quench/src/: CMakeLists.txt  Covariance.h  CovarianceParameters.h  Fields.cc  Fields.h  FieldsIOBase.cc  FieldsIOBase.h  Geometry.cc  Geometry.h  Increment.cc  Increment.h  InterpElement.h  Interpolation.cc  Interpolation.h  LinearVariableChange.cc  LinearVariableChange.h  LinearVariableChangeParameters.h  ModelData.cc  ModelData.h  State.cc  State.h  Traits.h  TraitsFwd.h  VariableChange.h  VariableChangeParameters.h
src/: CMakeLists.txt
src/bump/: CMakeLists.txt  LICENSE.md  type_lct.F90  type_mpl.F90  type_nam.F90  type_nicas.F90  type_samp.F90
src/mains/: CMakeLists.txt
src/saber/: .description  CMakeLists.txt  generics.fypp  instrumentation.fypp  subr_list.fypp
test/: .description  .gitattributes  CMakeLists.txt  CPPLINT.cfg  get_nprocs.py
test/fctest/: fctest_interpolatorbump.F90  fctest_nicas_sqrt.F90
test/interfaces/: CMakeLists.txt
test/mains/: BumpInterpolation.cc  InterpolationBump.cc  bump_main.F90  bump_main.cc  bump_main.fypp  qg4DVar.cc  qgDirac.cc  qgErrorCovarianceTraining.cc  qgEstimateParams.cc  quenchConvertState.cc  quenchDirac.cc  quenchErrorCovarianceTraining.cc  quenchRandomization.cc  quenchSaberBlockTest.cc  type_model.F90  type_model.F90.orig
test/quench/: CMakeLists.txt  Covariance.h  CovarianceParameters.h  CovarianceParams.h  Fields.F90  Fields.cc  Fields.h  Geometry.cc  Geometry.h  Increment.cc  Increment.h  Interface.h  LinearVarChange.h  LinearVarChangeParams.h  LinearVariableChange.h  LinearVariableChangeParameters.h  State.cc  State.h  Traits.h  TraitsFwd.h  VariableChange.h  VariableChangeParameters.h
test/saber/: BumpInterpolation.h
test/saber_data_oops/: forecast.ens.1.2009-12-31T00:00:00Z.P1D.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT10H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT11H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT12H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT1H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT2H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT3H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT4H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT5H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT6H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT7H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT8H.nc  forecast.ens.1.2009-12-31T00:00:00Z.P1DT9H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1D.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT10H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT11H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT12H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT1H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT2H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT3H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT4H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT5H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT6H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT7H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT8H.nc  forecast.ens.10.2009-12-31T00:00:00Z.P1DT9H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1D.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT10H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT11H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT12H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT1H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT2H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT3H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT4H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT5H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT6H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT7H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT8H.nc  forecast.ens.2.2009-12-31T00:00:00Z.P1DT9H.nc  forecast.ens.3.2009-12-31T00:00:00Z.P1D.nc  (+143 more)
test/saber_ref_oops/: saber_ref_oops.tar.gz.md5
test/testdata/: CovStats.nc  FPstats.nc  Lv.nc  MIO_coefficients.nc  MUstats.nc  Prho_bar_Mean.nc  addmask.ncl  bump_read_cmat_1-1_cmat_01_01_01_01.nc  bump_read_cmat_1-1_cmat_01_01_02_02.nc  bump_read_cmat_1-1_cmat_02_02_01_01.nc  bump_read_cmat_1-1_cmat_02_02_02_02.nc  bump_read_cmat_1-2_cmat_01_01_01_01.nc  bump_read_cmat_1-2_cmat_01_01_02_02.nc  bump_read_cmat_1-2_cmat_02_02_01_01.nc  bump_read_cmat_1-2_cmat_02_02_02_02.nc  bump_read_cmat_2-1_cmat_01_01_01_01.nc  bump_read_cmat_2-1_cmat_01_01_02_02.nc  bump_read_cmat_2-1_cmat_02_02_01_01.nc  bump_read_cmat_2-1_cmat_02_02_02_02.nc  bump_read_mom_1-1_mom-0001_0001-0001_02_02_02_02.nc  (+152 more)
test/testlist/: .description  (+55 more)
(+2749 files in other folders)
